// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled test styled overrideStyles 1`] = `
.emotion-0 {
  color: red;
}

<div>
  <button
    class="xl-demo-button emotion-0"
  >
    click
  </button>
</div>
`;

exports[`styled test styled overrideStyles 2`] = `
.emotion-0 {
  color: red;
  color: blue;
}

<div>
  <button
    class="xl-demo-button emotion-0"
  >
    click
  </button>
</div>
`;
